<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">Managers Congress 2013</string>
    
    <string name="title_conference_list">Conferences</string>
    <string name="title_activity_home">Managers Congress</string>
    <string name="title_section_agenda">Agenda</string>
    <string name="title_section_speakers">Speakers</string>
    <string name="title_section_details">Info</string>
    <string name="agenda_day">Day</string>
    <string name="agenda_start_time">Start time</string>
    <string name="agenda_title">Title</string>
    <string name="agenda_description">Description</string>
    
    <!-- Speakers -->
    <string name="speaker_picture">Speaker Picture</string>
    <string name="speaker_name">Speaker Name</string>
    <string name="speaker_position">Speaker Position</string>
    
    <!-- Event Details -->
    <string name="toast_error_map">Unable to show map</string>
    <string name="details_headquarters">Headquarters:</string>
    <string name="details_headquarters_info_1">Paraninfo de la UCM</string>
    <string name="details_headquarters_info_11">C/ San Bernardo, 49</string>
    <string name="details_headquarters_info_2">Museo del Traje</string>
    <string name="details_headquarters_info_21">Avda. Juan de Herrera, 2</string>
    <string name="details_map">Places map</string>
    <string name="details_contact">Contact:</string>
    <string name="details_contact_info">
        Correo electronico: jornadas.gerencia@ucm.es
        \n
       Telefonos: 91 394 35 70 - 91 394 34 64
    </string>
    <string name="details_button">See map</string>
        
    <!-- Alert Dialog -->
    <string name="dialog_title">Download Speaker\'s CV</string>
    <string name="dialog_message">Wifi isn\'t connected. Do you want to continue with the download?</string>
    
    <!-- Agenda Menu -->
    <string name="menu_full_details">See full details</string>
    <string name="toast_no_cv">No details available</string>

</resources>
