<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
	    <TextView 
	        android:id="@+id/details_headquarters"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/details_headquarters"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:textAppearance="?android:attr/textAppearanceMedium"/>
	    
	    <TextView 
	        android:id="@+id/details_headquarters_info_1"
	        android:layout_below="@id/details_headquarters"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/details_headquarters_info_1"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"/>
	    
	    <Button 
	        android:id="@+id/details_button_info_1"
	        android:layout_below="@id/details_headquarters"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/details_button"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="20dip"/>
	    
	    <TextView 
	        android:id="@+id/details_headquarters_info_2"
	        android:layout_below="@id/details_headquarters_info_1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/details_headquarters_info_2"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"/>
	    
	    <Button 
	        android:id="@+id/details_button_info_2"
	        android:layout_below="@id/details_button_info_1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/details_button"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="20dip"/>
	    
	    <TextView 
	        android:id="@+id/details_contact"
	        android:layout_below="@id/details_headquarters_info_2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:text="@string/details_contact"
	        android:textAppearance="?android:attr/textAppearanceMedium"/>
	    
	    <TextView 
	        android:id="@+id/details_contact_info"
	        android:layout_below="@id/details_contact"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:text="@string/details_contact_info"/>
	    
	    <ImageView
	        android:id="@+id/details_map"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/details_contact_info"
	        android:layout_margin="10dip"
	        android:contentDescription="@string/details_map"
	        android:src="@drawable/map"
	        android:adjustViewBounds="true" />

	</RelativeLayout>
</ScrollView>
