<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView 
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/speaker_picture"
        android:src="@drawable/ic_launcher"/>
    
    <TextView 
        android:id="@+id/speaker_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/picture"
        android:ellipsize="marquee"
        android:text="@string/speaker_name"/>
    
    <TextView 
        android:id="@+id/speaker_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/picture"
        android:layout_below="@id/speaker_name"
        android:ellipsize="marquee"
        android:text="@string/speaker_position"/>

</RelativeLayout>
