<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp" >

    <ImageView
        android:id="@+id/speaker_picture"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:padding="4dp"
        android:contentDescription="@string/speaker_picture" />

    <TextView
        android:id="@+id/speaker_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_toRightOf="@id/speaker_picture"
        android:ellipsize="marquee"
        android:text="@string/speaker_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/speaker_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/speaker_name"
        android:padding="4dp"
        android:layout_toRightOf="@id/speaker_picture"
        android:ellipsize="marquee"
        android:text="@string/speaker_position" />

</RelativeLayout>